Практическое задание Урока 1

--- a/01_Lesson_1_Practice.ipynb
+++ b/01_Lesson_1_Practice.ipynb
@@ -468,8 +468,8 @@
    "metadata": {},
    "source": [
     "##### Ответ:\n",
-    "- hit_rate показывает, например `сработала` или `не сработала` маркетинговая компания.\n",
-    "- precision_at_k - показывает `качество` маркетинговая компани или продаж относително топ `K` товаров в списке продвигаемых."
+    "- hit_rate показывает, например сработала или не сработала маркетинговая компания.\n",
+    "- precision_at_k - показывает качество маркетинговой компании или продаж относително топ `K` товаров в списке продвигаемых."
    ]
   },
   {
@@ -497,7 +497,7 @@
    "source": [
     "##### Ответ:\n",
     "- Ответ который был приведен выше - Продали новый самолет да/нет? Товар - самолет, клиент - покупатель.\n",
-    "- Разводка (например, 1-апрельская шутка) - товар - fake news, клиент - общественность или мас. медиа.\n",
+    "- \"Разводка\" (например, 1-апрельская шутка) - товар - fake news, клиент - общественность или мас. медиа.\n",
     "- Падение крупного метиорита - товар - жизнь на земле, клиент - человеческая расса."
    ]
   },
